Sample selection files backup

--- a/sample_selection/Sample Selection.ipynb
+++ b/sample_selection/Sample Selection.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,21 +124,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([140666.,   6341., 147007.,   8881.,   8881.])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "censored_noobs = read_censored_table('./Rcensored96.log',keywords = ['0','1','Total','C',\"Total2\"])\n",
+    "\n",
+    "censored_noobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrl}\n",
+      "\\begin{tabular}{lll}\n",
       "\\toprule\n",
-      "{} &  Individual obs & Share \\\\\n",
+      "{} & Individual obs & Share \\\\\n",
       "\\midrule\n",
-      "1     &        140666.0 &  0.29 \\\\\n",
-      "1+1C  &          6341.0 &  0.01 \\\\\n",
-      "2     &        336228.0 &  0.70 \\\\\n",
-      "Total &        483235.0 &  1.00 \\\\\n",
+      "C     &          8,881 &  0.02 \\\\\n",
+      "1     &        140,666 &  0.27 \\\\\n",
+      "1+1C  &          6,341 &  0.01 \\\\\n",
+      "2     &        336,228 &  0.68 \\\\\n",
+      "Total &        492,116 &  1.00 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -146,7 +169,7 @@
     }
    ],
    "source": [
-    "spell_nos = ['1','1+1C','2','Total']\n",
+    "spell_nos = ['C','1','1+1C','2','Total']\n",
     "noobs = np.empty(3)\n",
     "i = 0\n",
     "f = open('./spell_count.log','r')\n",
@@ -155,15 +178,18 @@
     "    if len(words)>0 and words[0] in spell_nos:\n",
     "        noobs[i] = float(words[2].replace(\",\",\"\"))\n",
     "        i+=1\n",
-    "censored_noobs = read_censored_table('./Rcensored96.log')\n",
+    "censored_noobs = read_censored_table('./Rcensored96.log',keywords = ['0','1','Total','C',\"TotalC\"])\n",
+    "# print(censored_noobs[3])\n",
     "noobs = np.insert(noobs, 1,censored_noobs[1])\n",
-    "noobs[0] = noobs[0]-noobs[1]\n",
+    "noobs = np.insert(noobs, 0,censored_noobs[3])\n",
+    "noobs[1] = noobs[1]-noobs[2]\n",
     "noobs[-1] = np.sum(noobs[:-1])\n",
     "\n",
     "table_noobs = pd.DataFrame(noobs,index=spell_nos,columns=['Individual obs',])\n",
     "table_noobs['Share'] = table_noobs['Individual obs']/table_noobs['Individual obs'].loc['Total']\n",
-    "# table_noobs['Share']['1'] = table_noobs['Share']['1'] - table_noobs['Share']['1+1C']\n",
+    "table_noobs['Share']['1'] = table_noobs['Share']['1'] - table_noobs['Share']['1+1C']\n",
     "table_noobs['Share'] = table_noobs['Share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "table_noobs['Individual obs'] = table_noobs['Individual obs'].apply(lambda x: \"{:,}\".format(int(x)))\n",
     "print(table_noobs.to_latex())"
    ]
   },
@@ -212,21 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrrll}\n",
+      "\\begin{tabular}{lllll}\n",
       "\\toprule\n",
-      "{} &  2002-2007 &  2008-2013 & 2002-2007 share & 2008-2013 share \\\\\n",
+      "{} & 2002-2007 & 2008-2013 & 2002-2007 share & 2008-2013 share \\\\\n",
       "\\midrule\n",
-      "1     &   114353.0 &   108831.0 &           0.431 &           0.374 \\\\\n",
-      "1+1C  &      180.0 &     7731.0 &           0.001 &           0.027 \\\\\n",
-      "2     &   150741.0 &   166342.0 &           0.568 &           0.572 \\\\\n",
-      "Total &   265274.0 &   290635.0 &           1.000 &           1.000 \\\\\n",
+      "C     &       765 &    16,263 &           0.003 &           0.054 \\\\\n",
+      "1     &   114,353 &   108,831 &           0.430 &           0.364 \\\\\n",
+      "1+1C  &       180 &     7,731 &           0.001 &           0.026 \\\\\n",
+      "2     &   150,741 &   166,342 &           0.567 &           0.556 \\\\\n",
+      "Total &   266,039 &   299,167 &           1.000 &           1.000 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -234,19 +261,21 @@
     }
    ],
    "source": [
-    "spell_nos = ['1','1+1C','2','Total']\n",
+    "spell_nos = ['C','1','1+1C','2','Total']\n",
     "\n",
     "noobs_0207 = read_censored_table('./spell_count0207.log',keywords = ['1','2','Total'],start='max_nup')\n",
     "noobs_0813 = read_censored_table('./spell_count0813.log',keywords = ['1','2','Total'],start='max_nup')\n",
-    "noobs_0207c = read_censored_table('./Rcensored0207.log',keywords = ['0','1','Total'])\n",
-    "noobs_0813c = read_censored_table('./Rcensored0813.log',keywords = ['0','1','Total'])\n",
+    "noobs_0207c = read_censored_table('./Rcensored0207.log',keywords = ['0','1','Total','C','TotalC'])\n",
+    "noobs_0813c = read_censored_table('./Rcensored0813.log',keywords = ['0','1','Total','C','TotalC'])\n",
     "\n",
     "noobs_0207 = np.insert(noobs_0207, 1,noobs_0207c[1])\n",
     "noobs_0207[0] = noobs_0207[0]-noobs_0207[1]\n",
+    "noobs_0207 = np.insert(noobs_0207, 0,noobs_0207c[3])\n",
     "noobs_0207[-1] = np.sum(noobs_0207[:-1])\n",
     "noobs_0813 = np.insert(noobs_0813, 1,noobs_0813c[1])\n",
-    "noobs_0813[-1] = np.sum(noobs_0813[:-1])\n",
     "noobs_0813[0] = noobs_0813[0]-noobs_0813[1]\n",
+    "noobs_0813 = np.insert(noobs_0813, 0,noobs_0813c[3])\n",
+    "noobs_0813[-1] = np.sum(noobs_0813[:-1])\n",
     "\n",
     "table_noobs = pd.DataFrame(np.vstack((noobs_0207,noobs_0813)).T,index=spell_nos,columns=['2002-2007','2008-2013'])\n",
     "table_noobs['2002-2007 share'] = table_noobs['2002-2007']/table_noobs['2002-2007'].loc['Total']\n",
@@ -254,6 +283,9 @@
     "\n",
     "table_noobs['2002-2007 share'] = table_noobs['2002-2007 share'].apply(lambda x: \"{:,.3f}\".format(float(x)))\n",
     "table_noobs['2008-2013 share'] = table_noobs['2008-2013 share'].apply(lambda x: \"{:,.3f}\".format(float(x)))\n",
+    "\n",
+    "table_noobs['2002-2007'] = table_noobs['2002-2007'].apply(lambda x: \"{:,}\".format(int(x)))\n",
+    "table_noobs['2008-2013'] = table_noobs['2008-2013'].apply(lambda x: \"{:,}\".format(int(x)))\n",
     "print(table_noobs.to_latex())"
    ]
   },
@@ -357,26 +389,28 @@
     "table_noobs['College share'] = table_noobs['College']/table_noobs['College'].loc['Total']\n",
     "table_noobs['Non-College share'] = table_noobs['Non-College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
     "table_noobs['College share'] = table_noobs['College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "\n",
     "print(table_noobs.to_latex())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{lrrll}\n",
+      "\\begin{tabular}{lllll}\n",
       "\\toprule\n",
-      "{} &  Non-College &  College & Non-College share & College share \\\\\n",
+      "{} & Non-College & College & Non-College share & College share \\\\\n",
       "\\midrule\n",
-      "1     &     115597.0 &  25069.0 &              0.28 &          0.33 \\\\\n",
-      "1+C   &       5395.0 &    946.0 &              0.01 &          0.01 \\\\\n",
-      "2     &     285727.0 &  50501.0 &              0.70 &          0.66 \\\\\n",
-      "Total &     406719.0 &  76516.0 &              1.00 &          1.00 \\\\\n",
+      "C     &       7,708 &   1,173 &              0.02 &          0.02 \\\\\n",
+      "1     &     115,597 &  25,069 &              0.28 &          0.32 \\\\\n",
+      "1+C   &       5,395 &     946 &              0.01 &          0.01 \\\\\n",
+      "2     &     285,727 &  50,501 &              0.69 &          0.65 \\\\\n",
+      "Total &     414,427 &  77,689 &              1.00 &          1.00 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -384,7 +418,7 @@
     }
    ],
    "source": [
-    "spell_nos = ['1','1+C','2','Total']\n",
+    "spell_nos = ['C','1','1+C','2','Total']\n",
     "noobs = np.empty((3,2))\n",
     "i = 0\n",
     "f = open('./spell_count_college.log','r')\n",
@@ -395,10 +429,12 @@
     "        noobs[i,0] = float(words[2].replace(\",\",\"\"))\n",
     "        noobs[i,1] = float(words[3].replace(\",\",\"\"))\n",
     "        i+=1\n",
-    "censored_noobs = read_censored_table_twoway('./RCensoredCollege.log',start='obs_stu_rc')\n",
+    "censored_noobs = read_censored_table_twoway('./RCensoredCollege.log',keywords = ['0','1','Total','C','TotalC'],\n",
+    "                                            start='obs_stu_rc')\n",
     "\n",
     "noobs = np.insert(noobs, 1,censored_noobs[1,:],axis=0)\n",
     "noobs[0,:] = noobs[0,:]-noobs[1,:]\n",
+    "noobs = np.insert(noobs, 0,censored_noobs[3,:],axis=0)\n",
     "noobs[-1,:] = np.sum(noobs[:-1],axis=0)\n",
     "\n",
     "table_noobs = pd.DataFrame(noobs,index=spell_nos,columns=['Non-College','College'])\n",
@@ -406,6 +442,8 @@
     "table_noobs['College share'] = table_noobs['College']/table_noobs['College'].loc['Total']\n",
     "table_noobs['Non-College share'] = table_noobs['Non-College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
     "table_noobs['College share'] = table_noobs['College share'].apply(lambda x: \"{:,.2f}\".format(float(x)))\n",
+    "table_noobs['Non-College'] = table_noobs['Non-College'].apply(lambda x: \"{:,}\".format(int(x)))\n",
+    "table_noobs['College'] = table_noobs['College'].apply(lambda x: \"{:,}\".format(int(x)))\n",
     "print(table_noobs.to_latex())"
    ]
   },
